--- a/DB/e/1Mo.tex
+++ b/DB/e/1Mo.tex
@@ -10,8 +10,8 @@ az $a_n=\gzjel{1+\frac{1}{n}}^{n}$ \szigmon{}nő.
 A \gmhm{}miatt:
 \szurkeM{
    1\gzjel{ 1+\frac{1}{n}}^{n+1}>
-   \gzjel{\frac{n+2}{1 + 1-\frac{1}{n}+\cdots+1-\frac{1}{n}}}^{n+2}=
-   \gzjel{ 1+\frac{1}{n+1}}^{n+2}
+   \gzjel{\frac{n+2}{1 + 1-\frac{1}{n+1}+\cdots+1-\frac{1}{n+1}}}^{n+2}=\\
+   =\gzjel{ 1+\frac{1}{n+1}}^{n+2}
 }
 az $b_n=\gzjel{1+\frac{1}{n}}^{n+1}$ \szigmon{}csökken.
 Könnyen látható, hogy:
