--- a/DB/e/1Mo.tex
+++ b/DB/e/1Mo.tex
@@ -20,4 +20,4 @@ Könnyen látható, hogy:
    b_n-a_n=\frac{a_n}{n}
 }
 Mindezek miatt a sorozatok konvergensek és a határértékeik egybeesnek. Ezt
-a számot $e$-vel szokták jelölni.
+a számot e-vel szokták jelölni.
