--- a/main.tex
+++ b/main.tex
@@ -16,14 +16,15 @@
 
    \section*{Tartalom} \label{Tart}
          \nameref{e}\newline
+         \nameref{nthroot}\newline
       \newpage
-      \section*{e-szám} \label{e}
+      \section*{az e-szám} \label{e}
       \section*{Tartalom-e} \label{Tarte}
          \nameref{e1}\newline
          \kek{
          \hfill{}\nameref{Tart}
          }\newpage
-         \section*{e-1} \label{e1}
+         \section*{Alap} \label{e1}
          \Fa{
             \input{DB/e/1Fa}
          }
@@ -32,12 +33,53 @@
          \hfill\nameref{Tarte}
          }
          \newpage
-         \section*{e-1-Mo} \label{e1Mo}
+         \section*{Alap-Mo} \label{e1Mo}
          \Mo{
             \input{DB/e/1Mo}
          }
          \Fa{
          \nameref{e1}
+         }
+         \newpage
+      \section*{n-edik gyök} \label{nthroot}
+      \section*{Tartalom-nthroot} \label{Tartnthroot}
+         \nameref{nthroot1}\newline
+         \nameref{nthroot2}\newline
+         \kek{
+         \hfill{}\nameref{Tart}
+         }\newpage
+         \section*{Konstans} \label{nthroot1}
+         \Fa{
+            \input{DB/nthroot/1Fa}
+         }
+         \Mo{
+         \nameref{nthroot1Mo}
+         \hfill\nameref{Tartnthroot}
+         }
+         \newpage
+         \section*{Konstans-Mo} \label{nthroot1Mo}
+         \Mo{
+            \input{DB/nthroot/1Mo}
+         }
+         \Fa{
+         \nameref{nthroot1}
+         }
+         \newpage
+         \section*{$n$} \label{nthroot2}
+         \Fa{
+            \input{DB/nthroot/2Fa}
+         }
+         \Mo{
+         \nameref{nthroot2Mo}
+         \hfill\nameref{Tartnthroot}
+         }
+         \newpage
+         \section*{$n$-Mo} \label{nthroot2Mo}
+         \Mo{
+            \input{DB/nthroot/2Mo}
+         }
+         \Fa{
+         \nameref{nthroot2}
          }
          \newpage
 
