--- a/egy.tex
+++ b/egy.tex
@@ -21,7 +21,7 @@
 \hspace{2cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\egy{DB/e/1}
+\egy{DB/nthroot/3}
 
 \end{spacing}
 
