--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
          \kek{
          \hfill{}\nameref{Tart}
          }\newpage
-         \section*{Alap} \label{e1}
+         \section*{alap} \label{e1}
          \Fa{
             \input{DB/e/1Fa}
          }
@@ -33,7 +33,7 @@
          \hfill\nameref{Tarte}
          }
          \newpage
-         \section*{Alap-Mo} \label{e1Mo}
+         \section*{alap-Mo} \label{e1Mo}
          \Mo{
             \input{DB/e/1Mo}
          }
@@ -45,10 +45,12 @@
       \section*{Tartalom-nthroot} \label{Tartnthroot}
          \nameref{nthroot1}\newline
          \nameref{nthroot2}\newline
+         \nameref{nthroot2a}\newline
+         \nameref{nthroot3}\newline
          \kek{
          \hfill{}\nameref{Tart}
          }\newpage
-         \section*{Konstans} \label{nthroot1}
+         \section*{konstans} \label{nthroot1}
          \Fa{
             \input{DB/nthroot/1Fa}
          }
@@ -57,7 +59,7 @@
          \hfill\nameref{Tartnthroot}
          }
          \newpage
-         \section*{Konstans-Mo} \label{nthroot1Mo}
+         \section*{konstans-Mo} \label{nthroot1Mo}
          \Mo{
             \input{DB/nthroot/1Mo}
          }
@@ -80,6 +82,40 @@
          }
          \Fa{
          \nameref{nthroot2}
+         }
+         \newpage
+         \section*{polinom} \label{nthroot2a}
+         \Fa{
+            \input{DB/nthroot/2aFa}
+         }
+         \Mo{
+         \nameref{nthroot2aMo}
+         \hfill\nameref{Tartnthroot}
+         }
+         \newpage
+         \section*{polinom-Mo} \label{nthroot2aMo}
+         \Mo{
+            \input{DB/nthroot/2aMo}
+         }
+         \Fa{
+         \nameref{nthroot2a}
+         }
+         \newpage
+         \section*{$n!$} \label{nthroot3}
+         \Fa{
+            \input{DB/nthroot/3Fa}
+         }
+         \Mo{
+         \nameref{nthroot3Mo}
+         \hfill\nameref{Tartnthroot}
+         }
+         \newpage
+         \section*{$n!$-Mo} \label{nthroot3Mo}
+         \Mo{
+            \input{DB/nthroot/3Mo}
+         }
+         \Fa{
+         \nameref{nthroot3}
          }
          \newpage
 
