--- a/otherdef.tex
+++ b/otherdef.tex
@@ -49,6 +49,15 @@ mértani-harmonikus közép#1
 Mértani-harmonikus közép#1
 }
 
+\newcommand{\amqm}[1]{%
+számtani-négyzetes közép#1
+}
+\newcommand{\Amqm}[1]{%
+Számtani-négyzetes közép#1
+}
+
+
+
 
 \newcommand{\szigmon}[1]{%
 szigorúan monoton#1
