--- a/DB/nthroot/1Mo.tex
+++ b/DB/nthroot/1Mo.tex
@@ -3,7 +3,6 @@ A következő megállapításokat tehetjük:
 \szurkeM{
    a=\gzjel{1+a_n}^n \ge 1+na_n \hspace{1cm}(\text{Bernoulli})\\
    \frac{a-1}{n}\ge a_n \\
-   1\le a^{\frac{1}{n}}\le 1+\frac{a-1}{n}\\
-   a^{\frac{1}{n}}\to 1 \hspace{1cm}(\text{rendőr-elv})
+   1\le a^{\frac{1}{n}}\le 1+\frac{a-1}{n}\hspace{1cm}(\text{rendőr-elv})
 }
 $a<1$ esetén alkalmazzuk $\frac{1}{a}$-ra a fentieket.
