--- a/DB/nthroot/2Mo.tex
+++ b/DB/nthroot/2Mo.tex
@@ -2,6 +2,5 @@ A következő megállapításokat tehetjük:
 \szurkeM{
    n=\gzjel{1+a_n}^n \ge 1+\frac{n(n-1)}{2}a^2_n \hspace{1cm}(\text{Binomiális})\\
    \sqrt{\frac{2}{n}}\ge a_n \\
-   1\le n^{\frac{1}{n}}\le 1+\sqrt{\frac{2}{n}}\\\
-   n^{\frac{1}{n}}\to 1 \hspace{1cm}(\text{rendőr-elv})
+   1\le n^{\frac{1}{n}}\le 1+\sqrt{\frac{2}{n}}\hspace{1cm}(\text{rendőr-elv})
 }
