--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
          \newpage
       \section*{n-edik gyök} \label{nthroot}
       \section*{Tartalom-nthroot} \label{Tartnthroot}
+         \nameref{nthrootSum}\newline
          \nameref{nthroot1}\newline
          \nameref{nthroot2}\newline
          \nameref{nthroot2a}\newline
@@ -50,6 +51,23 @@
          \kek{
          \hfill{}\nameref{Tart}
          }\newpage
+         \section*{Summa} \label{nthrootSum}
+         \Fa{
+            \input{DB/nthroot/SumFa}
+         }
+         \Mo{
+         \nameref{nthrootSumMo}
+         \hfill\nameref{Tartnthroot}
+         }
+         \newpage
+         \section*{Summa-Mo} \label{nthrootSumMo}
+         \Mo{
+            \input{DB/nthroot/SumMo}
+         }
+         \Fa{
+         \nameref{nthrootSum}
+         }
+         \newpage
          \section*{konstans} \label{nthroot1}
          \Fa{
             \input{DB/nthroot/1Fa}
