--- a/egy.tex
+++ b/egy.tex
@@ -9,7 +9,7 @@
 
 
 \begin{document}
-\begin{spacing}{1.7}
+\spacing{1}
 
 % cím
 \author{}
@@ -21,9 +21,8 @@
 \hspace{2cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\egy{DB/nthroot/3}
+\egy{DB/nthroot/Sum}
 
-\end{spacing}
 
 %\tableofcontents
 \end{document}
