--- a/common/szavakdef.tex
+++ b/common/szavakdef.tex
@@ -1,7 +1,3 @@
-% ez valahol kellett
-\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
-\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
-
 % rövid alakok a hosszabb szavakra
 \newcommand{\fv}[1]{%
 függvény#1
@@ -16,7 +12,7 @@ derivált#1
 }
 
 \newcommand{\Der}[1]{%
-derivált#1
+Derivált#1
 }
 
 \newcommand{\de}[1]{%
@@ -57,8 +53,6 @@ Számtani-négyzetes közép#1
 }
 
 
-
-
 \newcommand{\szigmon}[1]{%
 szigorúan monoton#1
 }
@@ -70,49 +64,4 @@ növekvő#1
 }
 \newcommand{\Nov}[1]{%
 Növekvő#1
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-% zárójelek stb.
-\newcommand{\gzjel}[1]{%
-{ \left( #1 \right) }
-}
-\newcommand{\Toligv}[2]{%
-#1,\hdots ,#2
-}
-
-
-\newcommand{\GZJ}[1]{%
-{ \left( #1 \right) }
-}
-
-\newcommand{\KZJ}[1]{%
-{ \{ #1 \} }
-}
-
-\newcommand{\SZZJ}[1]{%
-{ \left[ #1 \right] }
-}
-
-\newcommand{\Tolig}[2]{%
-#1\hdots #2
-}
-
-\newcommand{\SZOR}[2]{%
-#1\cdot\hdots\cdot #2
-}
-
-\newcommand{\mint}[2]{%
-\int #1 \text{d}#2
 }
