--- a/common/tcboxdef.tex
+++ b/common/tcboxdef.tex
@@ -25,16 +25,6 @@
 }
 
 
-\newcommand{\szurkeMB}[1]{%
-\begin{tcolorbox}[colback=gray!10!white, top=-5mm, bottom=3mm]
-\begin{gather*}
-#1
-\end{gather*}
-\end{tcolorbox}
-}
-
-
-
 \newcommand{\sarga}[1]{%
 \begin{tcolorbox}[colback=yellow!10!white]
 #1
@@ -85,12 +75,8 @@
 \Mo{\input{#1Mo}}
 }
 
-\newcommand{\tg}[0]{%
-\text{tg}
+
+\definecolor{light-gray}{gray}{0.95}
+\newcommand{\mcode}[1]{
+   \colorbox{light-gray}{\texttt{#1}}
 }
-\newcommand{\ctg}[0]{%
-\text{ctg}
-}
-
-
-
