--- a/main.tex
+++ b/main.tex
@@ -11,134 +11,155 @@
 % tcolorbox-al kapcsolatos
 \input{common/tcboxdef.tex}
 
-% itt van a feladatok listája
 \begin{document}\begin{spacing}{1.2}
 
-
-\input{cim}
-
-   \section*{Tartalom} \label{Tart}
-         \nameref{e}\newline
-         \nameref{nthroot}\newline
-      \newpage
-      \section*{az e-szám} \label{e}
-      \section*{Tartalom-e} \label{Tarte}
-         \nameref{e1}\newline
-         \kek{
-         \hfill{}\nameref{Tart}
-         }\newpage
-         \section*{alap} \label{e1}
-         \Fa{
-            \input{DB/e/1Fa}
-         }
-         \Mo{
-         \nameref{e1Mo}
-         \hfill\nameref{Tarte}
-         }
-         \newpage
-         \section*{alap-Mo} \label{e1Mo}
-         \Mo{
-            \input{DB/e/1Mo}
-         }
-         \Fa{
-         \nameref{e1}
-         }
-         \newpage
-      \section*{n-edik gyök} \label{nthroot}
-      \section*{Tartalom-nthroot} \label{Tartnthroot}
-         \nameref{nthrootSum}\newline
-         \nameref{nthroot1}\newline
-         \nameref{nthroot2}\newline
-         \nameref{nthroot2a}\newline
-         \nameref{nthroot3}\newline
-         \kek{
-         \hfill{}\nameref{Tart}
-         }\newpage
-         \section*{Summa} \label{nthrootSum}
-         \Fa{
-            \input{DB/nthroot/SumFa}
-         }
-         \Mo{
-         \nameref{nthrootSumMo}
-         \hfill\nameref{Tartnthroot}
-         }
-         \newpage
-         \section*{Summa-Mo} \label{nthrootSumMo}
-         \Mo{
-            \input{DB/nthroot/SumMo}
-         }
-         \Fa{
-         \nameref{nthrootSum}
-         }
-         \newpage
-         \section*{konstans} \label{nthroot1}
-         \Fa{
-            \input{DB/nthroot/1Fa}
-         }
-         \Mo{
-         \nameref{nthroot1Mo}
-         \hfill\nameref{Tartnthroot}
-         }
-         \newpage
-         \section*{konstans-Mo} \label{nthroot1Mo}
-         \Mo{
-            \input{DB/nthroot/1Mo}
-         }
-         \Fa{
-         \nameref{nthroot1}
-         }
-         \newpage
-         \section*{$n$} \label{nthroot2}
-         \Fa{
-            \input{DB/nthroot/2Fa}
-         }
-         \Mo{
-         \nameref{nthroot2Mo}
-         \hfill\nameref{Tartnthroot}
-         }
-         \newpage
-         \section*{$n$-Mo} \label{nthroot2Mo}
-         \Mo{
-            \input{DB/nthroot/2Mo}
-         }
-         \Fa{
-         \nameref{nthroot2}
-         }
-         \newpage
-         \section*{polinom} \label{nthroot2a}
-         \Fa{
-            \input{DB/nthroot/2aFa}
-         }
-         \Mo{
-         \nameref{nthroot2aMo}
-         \hfill\nameref{Tartnthroot}
-         }
-         \newpage
-         \section*{polinom-Mo} \label{nthroot2aMo}
-         \Mo{
-            \input{DB/nthroot/2aMo}
-         }
-         \Fa{
-         \nameref{nthroot2a}
-         }
-         \newpage
-         \section*{$n!$} \label{nthroot3}
-         \Fa{
-            \input{DB/nthroot/3Fa}
-         }
-         \Mo{
-         \nameref{nthroot3Mo}
-         \hfill\nameref{Tartnthroot}
-         }
-         \newpage
-         \section*{$n!$-Mo} \label{nthroot3Mo}
-         \Mo{
-            \input{DB/nthroot/3Mo}
-         }
-         \Fa{
-         \nameref{nthroot3}
-         }
-         \newpage
+\section*{Nevezetes határértékek} \label{DB}
+\nameref{DBe}
+\newline
+\nameref{DBnthroot}
+\newpage
+\section*{az e-szám} \label{DBe}
+\nameref{DBe1}
+\vspace{0.5cm}
+\LINK{
+\hfill\nameref{DB}
+}
+\newpage
+\section*{alap-Fa} \label{DBe1}
+\Fa{
+\input{DB/e/1Fa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBe1Mo}
+\hfill\nameref{DBe}
+}
+\newpage
+\section*{alap-Mo} \label{DBe1Mo}
+\Mo{
+\input{DB/e/1Mo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBe1}
+\hfill\nameref{DBe}
+}
+\newpage
+\section*{n-edik gyök} \label{DBnthroot}
+\nameref{DBnthrootSum}
+\newline
+\nameref{DBnthroot1}
+\newline
+\nameref{DBnthroot2}
+\newline
+\nameref{DBnthroot2a}
+\newline
+\nameref{DBnthroot3}
+\vspace{0.5cm}
+\LINK{
+\hfill\nameref{DB}
+}
+\newpage
+\section*{Mi is ez?-Fa} \label{DBnthrootSum}
+\Fa{
+\input{DB/nthroot/SumFa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthrootSumMo}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{Mi is ez?-Mo} \label{DBnthrootSumMo}
+\Mo{
+\input{DB/nthroot/SumMo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthrootSum}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{konstans-Fa} \label{DBnthroot1}
+\Fa{
+\input{DB/nthroot/1Fa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot1Mo}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{konstans-Mo} \label{DBnthroot1Mo}
+\Mo{
+\input{DB/nthroot/1Mo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot1}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{$n$-Fa} \label{DBnthroot2}
+\Fa{
+\input{DB/nthroot/2Fa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot2Mo}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{$n$-Mo} \label{DBnthroot2Mo}
+\Mo{
+\input{DB/nthroot/2Mo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot2}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{polinom-Fa} \label{DBnthroot2a}
+\Fa{
+\input{DB/nthroot/2aFa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot2aMo}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{polinom-Mo} \label{DBnthroot2aMo}
+\Mo{
+\input{DB/nthroot/2aMo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot2a}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{$n!$-Fa} \label{DBnthroot3}
+\Fa{
+\input{DB/nthroot/3Fa}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot3Mo}
+\hfill\nameref{DBnthroot}
+}
+\newpage
+\section*{$n!$-Mo} \label{DBnthroot3Mo}
+\Mo{
+\input{DB/nthroot/3Mo}
+}
+\vspace{0.5cm}
+\LINK{
+\nameref{DBnthroot3}
+\hfill\nameref{DBnthroot}
+}
+\newpage
 
 \end{spacing}
 \end{document}
