--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
 \hfill\nameref{DB}
 }
 \newpage
-\section*{Mi is ez?-Fa} \label{DBnthrootSum}
+\section*{Létezés...-Fa} \label{DBnthrootSum}
 \Fa{
 \input{DB/nthroot/SumFa}
 }
@@ -70,7 +70,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{Mi is ez?-Mo} \label{DBnthrootSumMo}
+\section*{Létezés...-Mo} \label{DBnthrootSumMo}
 \Mo{
 \input{DB/nthroot/SumMo}
 }
