--- a/DB/nthroot/SumMo.tex
+++ b/DB/nthroot/SumMo.tex
@@ -13,7 +13,7 @@ A valós számok felső/alsó-határ tulajdonsága miatt egyértelműen létezik
 $S=\sup a_{-}$ és $I=\inf a_{+}$ és $S\le I.$
 Ha $S < I$ akkor az ábra segít megtalálni az ellentmondást:
 \begin{center}
-\frame{\includegraphics[scale=1.2]{DB/nthroot/fig/elso}}
+\frame{\includegraphics[scale=1.2]{DB/fig/nthroot}}
 \end{center}
 Tehát $S=I.$ Ezért: $I^n = S^n \le a$ és $I^n\ge a$, vagyis az $S=I$ szám
 valóban $a^{\frac{1}{n}}$-ként viselkedik.
