--- a/common/matdef.tex
+++ b/common/matdef.tex
@@ -40,6 +40,11 @@
 \int #1 \text{d}#2
 }
 
+\newcommand{\mder}[2]{%
+\frac{\text{d} #1}{\text{d}#2}
+}
+
+
 % ez máshogy van alapban
 \newcommand{\tg}[0]{%
 \text{tg}
