--- a/DB/e/1Mo.tex
+++ b/DB/e/1Mo.tex
@@ -1,5 +1,5 @@
 A \amgm{}miatt:
-\szurkeM{
+\Mat{
    1\gzjel{ 1+\frac{1}{n}}^{n}<
    \gzjel{\frac{1 + 1+\frac{1}{n}+\cdots+1+\frac{1}{n}}{n+1}}^{n+1}=
    \gzjel{ 1+\frac{1}{n+1}}^{n+1}
@@ -8,14 +8,14 @@ az $a_n=\gzjel{1+\frac{1}{n}}^{n}$ \szigmon{}nő.
 
 
 A \gmhm{}miatt:
-\szurkeM{
+\Mat{
    1\gzjel{ 1+\frac{1}{n}}^{n+1}>
    \gzjel{\frac{n+2}{1 + 1-\frac{1}{n+1}+\cdots+1-\frac{1}{n+1}}}^{n+2}=\\
    =\gzjel{ 1+\frac{1}{n+1}}^{n+2}
 }
 az $b_n=\gzjel{1+\frac{1}{n}}^{n+1}$ \szigmon{}csökken.
 Könnyen látható, hogy:
-\szurkeM{
+\Mat{
    a_n < b_m \hspace{1cm} \forall m,n \\
    b_n-a_n=\frac{a_n}{n}
 }
