--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \hfill\nameref{DB}
 }
 \newpage
-\section*{\mcode{Fa}alap} \label{DBe1}
+\section*{\mtit{Fa}alap} \label{DBe1}
 \Fa{
 \input{DB/e/1Fa}
 }
@@ -37,7 +37,7 @@
 \hfill\nameref{DBe}
 }
 \newpage
-\section*{\mcode{Mo}alap} \label{DBe1Mo}
+\section*{\mtit{Mo}alap} \label{DBe1Mo}
 \Mo{
 \input{DB/e/1Mo}
 }
@@ -62,7 +62,7 @@
 \hfill\nameref{DB}
 }
 \newpage
-\section*{\mcode{Fa}Létezés...} \label{DBnthrootSum}
+\section*{\mtit{Fa}Létezés...} \label{DBnthrootSum}
 \Fa{
 \input{DB/nthroot/SumFa}
 }
@@ -72,7 +72,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Mo}Létezés...} \label{DBnthrootSumMo}
+\section*{\mtit{Mo}Létezés...} \label{DBnthrootSumMo}
 \Mo{
 \input{DB/nthroot/SumMo}
 }
@@ -82,7 +82,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Fa}konstans} \label{DBnthroot1}
+\section*{\mtit{Fa}konstans} \label{DBnthroot1}
 \Fa{
 \input{DB/nthroot/1Fa}
 }
@@ -92,7 +92,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Mo}konstans} \label{DBnthroot1Mo}
+\section*{\mtit{Mo}konstans} \label{DBnthroot1Mo}
 \Mo{
 \input{DB/nthroot/1Mo}
 }
@@ -102,7 +102,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Fa}$n$} \label{DBnthroot2}
+\section*{\mtit{Fa}$n$} \label{DBnthroot2}
 \Fa{
 \input{DB/nthroot/2Fa}
 }
@@ -112,7 +112,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Mo}$n$} \label{DBnthroot2Mo}
+\section*{\mtit{Mo}$n$} \label{DBnthroot2Mo}
 \Mo{
 \input{DB/nthroot/2Mo}
 }
@@ -122,7 +122,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Fa}polinom} \label{DBnthroot2a}
+\section*{\mtit{Fa}polinom} \label{DBnthroot2a}
 \Fa{
 \input{DB/nthroot/2aFa}
 }
@@ -132,7 +132,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Mo}polinom} \label{DBnthroot2aMo}
+\section*{\mtit{Mo}polinom} \label{DBnthroot2aMo}
 \Mo{
 \input{DB/nthroot/2aMo}
 }
@@ -142,7 +142,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Fa}$n!$} \label{DBnthroot3}
+\section*{\mtit{Fa}$n!$} \label{DBnthroot3}
 \Fa{
 \input{DB/nthroot/3Fa}
 }
@@ -152,7 +152,7 @@
 \hfill\nameref{DBnthroot}
 }
 \newpage
-\section*{\mcode{Mo}$n!$} \label{DBnthroot3Mo}
+\section*{\mtit{Mo}$n!$} \label{DBnthroot3Mo}
 \Mo{
 \input{DB/nthroot/3Mo}
 }
@@ -163,6 +163,8 @@
 }
 \newpage
 \section*{$\frac{\sin(x)}{x}$ és környéke} \label{DBsin}
+\nameref{DBsinSum}
+\newline
 \nameref{DBsin1}
 \newline
 \nameref{DBsin2}
@@ -173,7 +175,16 @@
 \hfill\nameref{DB}
 }
 \newpage
-\section*{\mcode{Fa}$\frac{\sin(x)}{x}\to 1$} \label{DBsin1}
+\section*{\mtit{Desc}${\sin} -{\tan}$ lemma} \label{DBsinSum}
+\Desc{
+\input{DB/sin/SumDesc}
+}
+\vspace{0.5cm}
+\LINK{
+\hfill\nameref{DBsin}
+}
+\newpage
+\section*{\mtit{Fa}$\frac{\sin(x)}{x}\to 1$} \label{DBsin1}
 \Fa{
 \input{DB/sin/1Fa}
 }
@@ -183,7 +194,7 @@
 \hfill\nameref{DBsin}
 }
 \newpage
-\section*{\mcode{Mo}$\frac{\sin(x)}{x}\to 1$} \label{DBsin1Mo}
+\section*{\mtit{Mo}$\frac{\sin(x)}{x}\to 1$} \label{DBsin1Mo}
 \Mo{
 \input{DB/sin/1Mo}
 }
@@ -193,7 +204,7 @@
 \hfill\nameref{DBsin}
 }
 \newpage
-\section*{\mcode{Fa}$\frac{1-\cos(x)}{x}\to 0$} \label{DBsin2}
+\section*{\mtit{Fa}$\frac{1-\cos(x)}{x}\to 0$} \label{DBsin2}
 \Fa{
 \input{DB/sin/2Fa}
 }
@@ -203,7 +214,7 @@
 \hfill\nameref{DBsin}
 }
 \newpage
-\section*{\mcode{Mo}$\frac{1-\cos(x)}{x}\to 0$} \label{DBsin2Mo}
+\section*{\mtit{Mo}$\frac{1-\cos(x)}{x}\to 0$} \label{DBsin2Mo}
 \Mo{
 \input{DB/sin/2Mo}
 }
@@ -213,7 +224,7 @@
 \hfill\nameref{DBsin}
 }
 \newpage
-\section*{\mcode{Fa}$\frac{\tg(x)-x}{x^2}\to 0$} \label{DBsin3}
+\section*{\mtit{Fa}$\frac{\tg(x)-x}{x^2}\to 0$} \label{DBsin3}
 \Fa{
 \input{DB/sin/3Fa}
 }
@@ -223,7 +234,7 @@
 \hfill\nameref{DBsin}
 }
 \newpage
-\section*{\mcode{Mo}$\frac{\tg(x)-x}{x^2}\to 0$} \label{DBsin3Mo}
+\section*{\mtit{Mo}$\frac{\tg(x)-x}{x^2}\to 0$} \label{DBsin3Mo}
 \Mo{
 \input{DB/sin/3Mo}
 }
