--- a/DB/sin/1Mo.tex
+++ b/DB/sin/1Mo.tex
@@ -1,7 +1,8 @@
-\begin{center}
-  \makebox[\textwidth]{\includegraphics[width=\textwidth]{DB/fig/sin}}
-\end{center}
+%\begin{center}
+%  \makebox[\textwidth]{\includegraphics[width=\textwidth]{DB/fig/sin}}
+%\end{center}
 %\frame{\includegraphics[scale=\textwidth]{DB/fig/sin}}
+A \ref{sin-tan} lemma miatt:
 \Mat{
    \cos(x)< \frac{\sin(x)}{x}< 1 \hspace{1cm} -\frac{\pi}{2}<x<\frac{\pi}{2}
 }
