--- a/common/tcboxdef.tex
+++ b/common/tcboxdef.tex
@@ -42,7 +42,13 @@
 \end{tcolorbox}
 }
 
-
+\newcommand{\MatLab}[2]{%
+\begin{tcolorbox}[colback=MASZ, top=-5mm, bottom=3mm]
+\begin{gather*}\label{#1}\tag{#1}
+#2
+\end{gather*}
+\end{tcolorbox}
+}
 
 
 \newcommand{\LINK}[1]{%
@@ -86,8 +92,6 @@
 }
 
 
-
-
 \newcommand{\Mo}[1]{%
 \begin{tcolorbox}[colback=MOSZ]
 #1
@@ -112,7 +116,14 @@
 
 
 
+
 \definecolor{light-gray}{gray}{0.95}
 \newcommand{\mcode}[1]{
    \colorbox{light-gray}{\texttt{#1}}
+}
+
+\newlength{\mlen}
+\settowidth{\mlen}{12345}
+\newcommand{\mtit}[1]{
+   \makebox[\mlen][r]{\color{gray}#1 }
 }
