--- a/DB/e/1Fa.tex
+++ b/DB/e/1Fa.tex
@@ -1,3 +1,9 @@
+\MatLab{ebase}{
+   a_n=\gzjel{ 1+\frac{1}{n}}^{n} \hspace{0.5cm} \nearrow\\
+   b_n=\gzjel{ 1+\frac{1}{n}}^{n+1} \hspace{0.5cm} \searrow\\
+   a_n < b_m\hspace{1cm} \forall n,m
+}
+Azaz:
 \Mat{
-   \exists \lim_{n\to \infty} \gzjel{ 1+\frac{1}{n}}^{n}
+   \exists \lim_{n\to \infty} \gzjel{ 1+\frac{1}{n}}^{n}=\mathrm{e}
 }
