--- a/common/szavakdef.tex
+++ b/common/szavakdef.tex
@@ -65,3 +65,14 @@ növekvő#1
 \newcommand{\Nov}[1]{%
 Növekvő#1
 }
+
+\newcommand{\elen}[1]{%
+egyenlőtlenség#1
+}
+
+\newcommand{\Elen}[1]{%
+Egyenlőtlenség#1
+}
+
+
+
