--- a/DB/e/1Fa.tex
+++ b/DB/e/1Fa.tex
@@ -1,4 +1,4 @@
-\MatLab{ebase}{
+\MatTag{ebase}{
    a_n=\gzjel{ 1+\frac{1}{n}}^{n} \hspace{0.5cm} \nearrow\\
    b_n=\gzjel{ 1+\frac{1}{n}}^{n+1} \hspace{0.5cm} \searrow\\
    a_n < b_m\hspace{1cm} \forall n,m
