--- a/DB/sin/SumDesc.tex
+++ b/DB/sin/SumDesc.tex
@@ -1,7 +1,8 @@
-\MatLab{sin-tan}{
+\MatTag{sin-tan}{
    \sin(x)< x < \tg(x) \hspace{1cm} -\frac{\pi}{2}<x<\frac{\pi}{2}
 }
-\begin{center}
-  \makebox[\textwidth]{\includegraphics[width=\textwidth]{DB/fig/sin}}
-\end{center}
+\egykep{sintan}
+%~ \begin{center}
+  %~ \makebox[\textwidth]{\includegraphics[width=\textwidth]{DB/fig/sintan}}
+%~ \end{center}
 %\frame{\includegraphics[scale=\textwidth]{DB/fig/sin}}
