--- a/common/matdef.tex
+++ b/common/matdef.tex
@@ -23,7 +23,7 @@
 { \{ #1 \} }
 }
 
-\newcommand{\SZZJ}[1]{%
+\newcommand{\szzjel}[1]{%
 { \left[ #1 \right] }
 }
 
@@ -49,7 +49,24 @@
 \newcommand{\tg}[0]{%
 \tan
 }
+
 \newcommand{\ctg}[0]{%
 \cot
 }
 
+\newcommand{\D}[1]{%
+{{\mathbb{D}\szzjel{#1}}}
+}
+
+\newcommand{\V}[1]{%
+{{{\mathbb{D}}^{2}\szzjel{#1}}}
+}
+
+
+\newcommand{\E}[1]{%
+{{\mathbb{E}\szzjel{#1}}}
+}
+
+\newcommand{\A}[1]{%
+{\mathbb{A}\szzjel{#1}}
+}
