--- a/common/szavakdef.tex
+++ b/common/szavakdef.tex
@@ -74,5 +74,10 @@ egyenlőtlenség#1
 Egyenlőtlenség#1
 }
 
+\newcommand{\vv}[1]{%
+valségi változó#1
+}
 
-
+\newcommand{\Vv}[1]{%
+Valségi változó#1
+}
