--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \input{common/tcboxdef.tex}
 
 \begin{document}\begin{spacing}{1.2}
+\pagecolor{BGSZ}
 
 \section*{Nevezetes határértékek} \label{DB}
 \nameref{DBe}
