--- a/common/tcboxdef.tex
+++ b/common/tcboxdef.tex
@@ -1,17 +1,30 @@
 %https://tex.stackexchange.com/questions/254324/how-to-creat-color-boxes-as-the-picture
 % FASZ = feladatszín
 \definecolor{FASZ}{RGB}{160, 187, 229}
-\definecolor{LESZ}{RGB}{206, 177, 224}
+%\definecolor{LESZ}{RGB}{206, 177, 224} ez lilás
+\definecolor{LESZ}{RGB}{173, 173, 235}
 \definecolor{MOSZ}{RGB}{102, 209, 141}
 \definecolor{LISZ}{RGB}{232, 219, 106}
 %\definecolor{MASZ}{RGB}{217, 210, 221}
 \definecolor{MASZ}{RGB}{210, 203, 214}
+%\definecolor{BGSZ}{RGB}{224,224,224} szurke
+\definecolor{BGSZ}{RGB}{220,220,220} 
 
 
 \newcommand{\feher}[1]{%
 \begin{tcolorbox}[colback=white]
 #1
 \end{tcolorbox}
+}
+
+\newcommand{\matlab}[1]{%
+\feher{\lstinputlisting{DB/M/#1.m}}
+}
+
+\newcommand{\egykep}[1]{%
+\begin{center}
+\makebox[\textwidth]{\includegraphics[width=\textwidth]{DB/fig/#1}}
+\end{center}
 }
 
 \newcommand{\zold}[1]{%
@@ -42,7 +55,7 @@
 \end{tcolorbox}
 }
 
-\newcommand{\MatLab}[2]{%
+\newcommand{\MatTag}[2]{%
 \begin{tcolorbox}[colback=MASZ, top=-5mm, bottom=3mm]
 \begin{gather*}\label{#1}\tag{#1}
 #2
@@ -88,6 +101,7 @@
 
 \newcommand{\Dnew}[0]{%
 \end{tcolorbox}
+\newpage
 \begin{tcolorbox}[colback=LESZ]
 }
 
@@ -122,8 +136,12 @@
    \colorbox{light-gray}{\texttt{#1}}
 }
 
+
+
 \newlength{\mlen}
 \settowidth{\mlen}{12345}
 \newcommand{\mtit}[1]{
    \makebox[\mlen][r]{\color{gray}#1 }
 }
+
+
