--- a/common/szavakdef.tex
+++ b/common/szavakdef.tex
@@ -81,3 +81,14 @@ valségi változó#1
 \newcommand{\Vv}[1]{%
 Valségi változó#1
 }
+
+\newcommand{\leb}[0]{%
+lebegőpontos
+}
+
+\newcommand{\Leb}[0]{%
+Lebegőpontos
+}
+
+
+
